[gd_scene load_steps=10 format=3 uid="uid://b5f1xiok2c71p"]

[ext_resource type="Script" path="res://Scenes/Rooms/default_room.gd" id="1_upcu4"]
[ext_resource type="Texture2D" uid="uid://c88vp8neqrqwx" path="res://ART/TILESETS/Dungeon tileset.png" id="2_vquh4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5o8w"]
size = Vector2(256, 160)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_upxrc"]
texture = ExtResource("2_vquh4")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 8, -8, 8, 8, -1, 8)
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(1, 8, -8, 8, -8, -8, 4, -8)
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -1, 8, 8, -8, 8, -8, -4)
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, -8, -8, 8, -8, 8, 1)
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4, 8, 8, -8, 8, -8, -1)
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1, -8, -8, 8, -8, 8, 4)
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, -8, 8, -8, -8, 1, -8)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1, -8, 8, -8, 8, 8, -4, 8)

[sub_resource type="TileSet" id="TileSet_3teec"]
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_upxrc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4322"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1ymc"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4xh0"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i81dx"]
size = Vector2(16, 32)

[node name="default_room" type="Node2D"]
script = ExtResource("1_upcu4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(128, 80)
shape = SubResource("RectangleShape2D_n5o8w")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3teec")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 2, 65536, 0, 3, 131072, 0, 3, 196608, 0, 3, 262144, 0, 3, 327680, 0, 3, 393216, 0, 3, 458752, 0, 3, 524288, 0, 3, 589824, 0, 4, 589825, 65536, 4, 589826, 65536, 4, 589827, 65536, 4, 589828, 65536, 4, 589829, 65536, 4, 589830, 65536, 4, 589831, 65536, 4, 589832, 65536, 4, 589833, 65536, 4, 589834, 65536, 4, 589835, 65536, 4, 589836, 65536, 4, 589837, 65536, 4, 589838, 65536, 4, 524302, 0, 1, 589839, 131072, 4, 524303, 131072, 3, 458767, 131072, 3, 393231, 131072, 3, 327695, 131072, 3, 262159, 131072, 3, 196623, 131072, 3, 131087, 131072, 3, 65551, 131072, 3, 15, 131072, 2, 14, 65536, 2, 1, 65536, 2, 2, 65536, 2, 3, 65536, 2, 4, 65536, 2, 5, 65536, 2, 6, 65536, 2, 7, 65536, 2, 8, 65536, 2, 9, 65536, 2, 10, 65536, 2, 11, 65536, 2, 12, 65536, 2, 13, 65536, 2, 327687, 0, 1, 262151, 0, 1, 196615, 0, 1, 131079, 0, 1, 65543, 0, 1, 65542, 0, 1, 65541, 0, 1, 65540, 0, 1, 65539, 0, 1, 65538, 0, 1, 65537, 0, 1, 131073, 0, 1, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 524290, 0, 1, 458754, 0, 1, 393218, 0, 1, 327682, 0, 1, 262146, 0, 1, 196610, 0, 1, 131074, 0, 1, 131075, 0, 1, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 524292, 0, 1, 458756, 0, 1, 393220, 0, 1, 327684, 0, 1, 262148, 0, 1, 196612, 0, 1, 131076, 0, 1, 131077, 0, 1, 196613, 0, 1, 262149, 0, 1, 327685, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 524294, 0, 1, 458758, 0, 1, 393222, 0, 1, 327686, 0, 1, 262150, 0, 1, 196614, 0, 1, 131078, 0, 1, 393223, 0, 1, 458759, 0, 1, 524295, 0, 1, 524296, 0, 1, 458760, 0, 1, 393224, 0, 1, 327688, 0, 1, 262152, 0, 1, 196616, 0, 1, 131080, 0, 1, 65544, 0, 1, 65545, 0, 1, 131081, 0, 1, 196617, 0, 1, 262153, 0, 1, 327689, 0, 1, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 524298, 0, 1, 458762, 0, 1, 393226, 0, 1, 327690, 0, 1, 262154, 0, 1, 196618, 0, 1, 131082, 0, 1, 65546, 0, 1, 65547, 0, 1, 131083, 0, 1, 196619, 0, 1, 262155, 0, 1, 327691, 0, 1, 393227, 0, 1, 458763, 0, 1, 524299, 0, 1, 524300, 0, 1, 458764, 0, 1, 393228, 0, 1, 327692, 0, 1, 262156, 0, 1, 196620, 0, 1, 131084, 0, 1, 65548, 0, 1, 65549, 0, 1, 131085, 0, 1, 196621, 0, 1, 262157, 0, 1, 327693, 0, 1, 393229, 0, 1, 458765, 0, 1, 524301, 0, 1, 458766, 0, 1, 393230, 0, 1, 327694, 0, 1, 262158, 0, 1, 196622, 0, 1, 131086, 0, 1, 65550, 0, 1)

[node name="Spawners" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="DownDoor" type="Area2D" parent="Doors"]
position = Vector2(128, 146)
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/DownDoor"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_r4322")
disabled = true

[node name="UpDoor" type="Area2D" parent="Doors"]
position = Vector2(128, 14)
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/UpDoor"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_v1ymc")
disabled = true

[node name="LeftDoor" type="Area2D" parent="Doors"]
position = Vector2(8, 80)
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/LeftDoor"]
shape = SubResource("RectangleShape2D_l4xh0")
disabled = true

[node name="RightDoor" type="Area2D" parent="Doors"]
position = Vector2(248, 80)
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/RightDoor"]
shape = SubResource("RectangleShape2D_i81dx")
disabled = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
